--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
-    "@ionic-native/core": "^4.3.1",
+    "@ionic-native/core": "^4.11.0",
+    "@ionic-native/google-maps": "^4.9.1",
     "@ionic-native/in-app-browser": "^4.3.1",
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.3.1",
     "@ionic/storage": "2.1.3",
     "cordova-android": "^7.1.1",
+    "cordova-android-support-gradle-release": "^1.4.4",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.6",
@@ -70,7 +72,10 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      }
     }
   }
 }
