--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cordova-ios": "^4.5.5",
     "cordova-plugin-crosswalk-webview": "^2.3.0",
     "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-googlemaps": "^2.3.10",
     "cordova-plugin-inappbrowser": "^1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.0.2",
     "cordova-plugin-ionic-webview": "^1.1.15",
@@ -42,8 +43,10 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "^4.17.10",
+    "minimist": "^1.2.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
+    "xml2js": "^0.4.19",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
