--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "@ionic-native/splash-screen": "^4.3.1",
     "@ionic-native/status-bar": "^4.3.1",
     "@ionic/storage": "2.1.3",
-    "cordova-android": "^7.1.1",
+    "cordova-android": "7.1.1",
     "cordova-android-support-gradle-release": "^1.4.4",
     "cordova-ios": "^4.5.5",
-    "cordova-plugin-crosswalk-webview": "^2.3.0",
-    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-crosswalk-webview": "^2.4.0",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-googlemaps": "^2.3.10",
-    "cordova-plugin-inappbrowser": "^1.7.1",
-    "cordova-plugin-ionic-keyboard": "^2.0.2",
-    "cordova-plugin-ionic-webview": "^1.1.15",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-plugin-inappbrowser": "^1.7.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "hoek": "^5.0.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -78,6 +78,12 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "27.+"
+      },
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyBA0ILoCQAFNEFWv7Lt0ZOWYeSa-DnJt_4",
+        "API_KEY_FOR_IOS": "AIzaSyBA0ILoCQAFNEFWv7Lt0ZOWYeSa-DnJt_4",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
       }
     }
   }
